[package]
name = "nspt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
nspt_common = { path = "../nspt_common" }
rand = "0.8.5"
structopt = "0.3.26"
